# convex-hull-assignment-Kriiif

./: CMakeLists.txt  CMakeLists.txt.user.8b87050  README.md  drawingcanvas.cpp  drawingcanvas.h  drawingwindow.cpp  drawingwindow.h  main.cpp
